Job @ bonify (Berlin): Frontend Developer | JOIN. Job Application for Front-end Web Developer (Temp) at Singular.       Front-End Developer - Daily Paper     . Job @ Pickwings (Zürich): Front-End Developer | JOIN. Act-On Software Careers - Sr. Software Engineer (Front-end). Job Application for Front End Developer at Consensys. Job Application for Front End Developer (Solutions US) at Consensys. Job @ TLGG Consulting (Berlin): Senior Frontend De... | JOIN. Front End ReactJS developer | Career Movement. LaunchDarkly - Software Engineer, Frontend. Qlik Careers - Frontend Developer. Kalo - Senior Front-End Software Engineer. Job Application for Frontend Engineer (m/f/d) at heycar. Job Application for Senior Frontend Engineer at Grow Mobility. Job @ brandung & Co. KG (Berlin): Frontend Develop... | JOIN. CITECH Concepteur / Développeur Front End (H/F) | SmartRecruiters.       Front-end Developer - Channable     .       Front End Developer at Moixa Technology - London, UK - Dribbble Design Jobs   . CITECH Concepteur / Développeur Front End (H/F) | SmartRecruiters. Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page. Mid-Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page. Job @ skatedeluxe Skateshop (Leipzig): Frontend En... | JOIN. Job @ skatedeluxe Skateshop (Jena): Frontend Entwi... | JOIN.     Frontend Developer Intern at Email Meter . Broadridge Front-End Developer (Contract) | SmartRecruiters. Sr Frontend Developer (React JS or Angular JS). Broadsign Front End Web Developer Intern | SmartRecruiters. Front-end Engineer - TED Conferences LLC - Career Page. Developer Front End - mindcurv - Career Page. Veeam Front-End Developer (AEM) | SmartRecruiters. Job Application for Front End Software Engineer at Menlo Security. Bey Front End Developer | SmartRecruiters. Veeam Front-End Developer (AEM) | SmartRecruiters. Omio Engineering Manager - Front End - Core XP | SmartRecruiters. Veeam Front-End D

--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://bonify.join.com/jobs/470018-frontend-developer'>Job @ bonify (Berlin): Frontend Developer | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Germany  Berlin Berlin</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/singular/jobs/4500388002'>Job Application for Front-end Web Developer (Temp) at Singular</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -80,7 +84,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kalo/493ccd9f-3634-4729-94e8-271c509dbfe0'>Kalo - Senior Front-End Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/kalo/493ccd9f-3634-4729-94e8-271c509dbfe0'>Kalo - Senior Front-End Software Engineer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -128,7 +132,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skatedeluxe.join.com/jobs/454760-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Jena): Frontend Entwi... | JOIN</a></h5> 
+<h5><a href='https://skatedeluxe.join.com/jobs/454760-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Jena): Frontend Entwi... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -146,7 +150,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698579843-front-end-web-developer-intern'>Broadsign Front End Web Developer Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698579843-front-end-web-developer-intern'>Broadsign Front End Web Developer Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -232,7 +236,7 @@
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://4finance.recruiterbox.com/jobs/fk03ioy/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4finance.recruiterbox.com/jobs/fk03ioy/'>
     Senior Frontend Developer at 4Finance IT
 </a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
@@ -302,7 +306,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1939551'>Job Application for Senior Software Engineer- Front End at Fuze</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1939551'>Job Application for Senior Software Engineer- Front End at Fuze</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA  Boston, MA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -348,7 +352,7 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ringcentral/job/oDXrbfwW'>RingCentral Careers - Front-end Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ringcentral/job/oDXrbfwW'>RingCentral Careers - Front-end Engineer</a></h5> 
 <p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -424,7 +428,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://bx-cert.ru/job/frontend--66294/'>? ?????-?????????? ????????? Frontend-???????????, ???????? ?? 30000 ??????</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bx-cert.ru/job/frontend--66294/'>? ?????-?????????? ????????? Frontend-???????????, ???????? ?? 30000 ??????</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -432,7 +436,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... Apply to Front End Engineer - DeepNLP at SparkCognition in Austin, TX.</p>
 <hr/>
-<h5><a href='https://e-bot7.join.com/jobs/470792-senior-frontend-engineer-elm-m-f-d'>Job @ e-bot7 (Munich): Senior Frontend Engineer El... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://e-bot7.join.com/jobs/470792-senior-frontend-engineer-elm-m-f-d'>Job @ e-bot7 (Munich): Senior Frontend Engineer El... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -448,7 +452,7 @@
 <p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://georgelabs.recruitee.com/o/frontend-developer-fmd-for-corporates-and-markets-tribe'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://georgelabs.recruitee.com/o/frontend-developer-fmd-for-corporates-and-markets-tribe'>
       Frontend Developer (f/m/d) for Corporates and Markets Tribe - George Labs GmbH
     </a></h5> 
 <p><span class="badge badge-light">Vienna</span></p>
@@ -456,10 +460,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999698466595-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698465571-senior-front-end-engineer'>lm group Senior Front End Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
