--- a/deep-learning.html
+++ b/deep-learning.html
@@ -71,7 +71,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543439-data-scientist-deep-learning'>Bosch Group Data Scientist ? Deep Learning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543439-data-scientist-deep-learning'>Bosch Group Data Scientist ? Deep Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -154,7 +154,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/oVCmbfwO'>Samsung Semiconductor, Inc. Careers - Research Intern, Deep Learning Platform</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -284,7 +284,7 @@ with a?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/6sbrdkwb94xno4uikwmox8f6yr'>Artificial Intelligence and Deep Learning Research Scientist (Ph.D. Candidates!) | CardinalHire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/6sbrdkwb94xno4uikwmox8f6yr'>Artificial Intelligence and Deep Learning Research Scientist (Ph.D. Candidates!) | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
@@ -292,7 +292,7 @@ with a?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://iit.it/careers/openings/opening/1081-postdoc-position-on-deep-learning-for-online-3d-scene-understanding-from-images'>Postdoc position on deep learning for online 3D scene understanding from images</a></h5> 
+<h5><a href='https://iit.it/careers/openings/opening/1081-postdoc-position-on-deep-learning-for-online-3d-scene-understanding-from-images'>Postdoc position on deep learning for online 3D scene understanding from images</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-27</p>
 <hr/>
@@ -477,11 +477,11 @@ Skills - Barcelona at Crisalix.</p>
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-08-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/the-climate-corporation-internal/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<h5><a href='https://jobs.jobvite.com/the-climate-corporation-internal/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sertis/jobs/4017140002'>Job Application for Deep Learning Researcher (Computer Vision ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sertis/jobs/4017140002'>Job Application for Deep Learning Researcher (Computer Vision ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... You will be responsible for the research and development of cutting-edge AI and 
 machine learning algorithms, playing with state of the art deep learning models?...</p>
