Learning Data Science Outside of the Classroom - Punchh. Job Application for Data Scientist at  Cazoo. Gojek - Sr. Data Scientist - GoFood. Rappi - Sr Operations Researcher - Data Scientist. Senior Data Scientist - YouVisit LLC - Career Page. Job Application for Data Scientist, Chemical & Medical Data Analysis at Osler Diagnostics. Yelp - Data Science Analyst. Senior Data Scientist - Saavn - Career Page. Criteo - Data Scientist. Job Application for Director of Analytics & Data Science at Unite Us. Job @ Solactive  (Dresden): Data Scientist (m/f/d) | JOIN.       Praktikant/Werkstudent Data Science/Machine Learning (w/m/d) - CYRES Consulting Services GmbH     . Job @ Vertical  Scale  (Berlin): Data Scientist In... | JOIN. Job @ Vertical  Scale  (Berlin): Data Scientist as... | JOIN. Biogen Data Scientist (Cambridge or RTP) | SmartRecruiters. Job Application for Data Science Instructor - Local Lead at General Assembly. Junior Data Scientist (Working Student m/f/d). Ubisoft Data Scientist (user research lab) | SmartRecruiters. Geotab - Data Scientist. Data Scientist - Actuarials - Roles at Sumner &amp; Scott. UNDP Jobs - 88288- Consultancy – Technical Expert, Data Scientist for. Verisk Senior Data Scientist | SmartRecruiters. Junior Data Scientist #0591 job at Stratus Solutions in Springfield, VA, powered by JobScore. Ubisoft Junior Data Scientist (M/F) | SmartRecruiters. Freedom Financial Network Careers - Contractor-Data Scientist. Data Scientist - Automotives | Averity. Bosch Group BCAI_Data Scientist | SmartRecruiters. SQL System Engineer | PROSTAFF – Swiss IT and Data Science Recruitment &amp; HR-Services. Senior Data Scientist - Akamai Careers. Job @ SO1 (Berlin): (Senior) Data Scientist (m/f/x) | JOIN. Data Scientist - NetImpact Strategies - Career Page. Data Science Sol Consultant - Anthem, Inc. Careers.       Data Scientist NLP (F/M/DIV) - Scorable     . Bosch Group Data Scientist – Deep Learning | SmartRecruiters. Upside - Data Science Business Analyst. Freedo

--- a/data-science.html
+++ b/data-science.html
@@ -181,7 +181,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.prostaff.ch/de/jobs/19144'>SQL System Engineer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.prostaff.ch/de/jobs/19144'>SQL System Engineer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -227,7 +227,7 @@
 <p><span class="badge badge-light">Chennai, India  Chennai, India  Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://renault.referrals.selectminds.com/jobs/st-bac%2B5-ing%C3%A9nieur-data-science-d%C3%A9tection-danomalies-dans-les-donn%C3%A9es-de-v%C3%A9hicules-%C3%A9lectrique-connect%C3%A9s-f-h-14209'>ST - BAC+5 - Ing?nieur Data science: d?tection d'anomalies dans les donn?es de v?hicules ?lectrique connect?s F/H - Carri?res chez Groupe RENAULT</a></h5> 
+<h5><a href='https://renault.referrals.selectminds.com/jobs/st-bac%2B5-ing%C3%A9nieur-data-science-d%C3%A9tection-danomalies-dans-les-donn%C3%A9es-de-v%C3%A9hicules-%C3%A9lectrique-connect%C3%A9s-f-h-14209'>ST - BAC+5 - Ing?nieur Data science: d?tection d'anomalies dans les donn?es de v?hicules ?lectrique connect?s F/H - Carri?res chez Groupe RENAULT</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -284,7 +284,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZE9Vfwr&k=Job&j=o8fsbfwK&__jvst=Employee&__jvsd=sAyZYgwQ&__jvsc=Twitter&bid=nr3voMwE'>Kaleidoscope Careers - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Cincinnati Cincinnati Cincinnati Cincinnati Cincinnati</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -320,7 +320,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://geico.referrals.selectminds.com/jobs/senior-data-scientist-10781'>Senior Data Scientist - GEICO Careers</a></h5> 
+<h5><a href='https://geico.referrals.selectminds.com/jobs/senior-data-scientist-10781'>Senior Data Scientist - GEICO Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -340,7 +340,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wealthfront/b5735e2d-fb2e-4870-8383-f1702a8b124c'>Wealthfront - Data Scientist - Optimization</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wealthfront/b5735e2d-fb2e-4870-8383-f1702a8b124c'>Wealthfront - Data Scientist - Optimization</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -392,7 +392,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698408806-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698408806-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States  Atlanta, GA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -420,7 +420,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Beijing</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/retinaai/jobs/4251997002?gh_src=eaf261482'>Job Application for Data Scientist at Retina AI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retinaai/jobs/4251997002?gh_src=eaf261482'>Job Application for Data Scientist at Retina AI</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -436,7 +436,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494051002'>Job Application for Data Scientist at Snowflake</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494051002'>Job Application for Data Scientist at Snowflake</a></h5> 
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
